# code-for-my-blog

./: README.md
2014/10/solaris_multithread/: Makefile  a.c
2015/06/wg/: wg.go
2015/07/: conn.go
2016/06/http_cli/: cli_1.go  cli_2.go
2017/01/carry-formula-in-look-ahead-adder/: CarryFormulaInLookAheadAdder.py  README.md
2017/05/perf_test/: Makefile  test.cpp
2017/11/free/: Makefile  free.cpp
2018/04/benchmark-ifstream-and-mmap/: Makefile  test_ifstream.cpp
2018/04/benchmark-string-at-and-index/: Makefile  testPalindrome_at.cpp  testPalindrome_index.cpp
2018/05/serialize/: Makefile  test.cc
2018/06/testP2P/: CMakeLists.txt  testP2P.cu
2019/04/openmp_thread_pool/: Makefile  test.c
2019/06/dg_show_thread_ids/: CMakeLists.txt  main.c
2019/06/show_thread_ids/: CMakeLists.txt  main.cpp
2019/06/spawn_threads/: CMakeLists.txt  main.cpp
2019/07/c_threads/: CMakeLists.txt  main.c
2019/07/judy_array_example/: Makefile  judy_example.c
2019/08/pcap_utilities/: Makefile  copy.c  ipfrag.c  ooo.c  reassemble.c
2019/10/volatile/: Makefile  parallel.c
2019/12/: search_ip_frag.sh
2019/12/align/: Makefile  align.c
2020/01/: pcapCorpus.py
2020/02/: proc_large_pcap.sh
2020/03/pcapng-parse/: Makefile  main.cpp
2020/05/asan_no_sanitize_address/: CMakeLists.txt  main.c
2020/06/: add_ts_for_pcap.sh
2020/07/main_thread_exit/: CMakeLists.txt  main.c
2020/09/create_quic_pcap/: CMakeLists.txt  main.c
2020/09/quic_initial_secrets/: CMakeLists.txt  main.c
2020/10/create_quic_draft_30_pcap/: CMakeLists.txt  main.c
2021/04/simple_server/: CMakeLists.txt  main.c
2021/08/libunwind_backtrace/: CMakeLists.txt  libunwind_backtrace.c
(+34 files in other folders)
